# Financial-data-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
market_pipeline/: __init__.py  adjustments.py  config.py  fetcher.py  gaps.py  outliers.py  pipeline.py  returns.py  scoring.py  validator.py
market_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_adjustments.py  test_gaps.py  test_outliers.py  test_pipeline.py  test_returns.py  test_scoring.py  test_validator.py
